# Ame

./: Cargo.toml
.cargo/: config.toml
crates/ame-app/: Cargo.toml
crates/ame-app/src/: main.rs
crates/ame-app/src/action/: auth_actions.rs  library_actions.rs  mod.rs  player_actions.rs  queue_actions.rs  search_actions.rs  session_actions.rs
crates/ame-app/src/component/: bottom_bar.rs  control_bar.rs  icon.rs  mod.rs  queue_panel.rs  search_input.rs  slider.rs  theme.rs  virtual_list.rs
crates/ame-app/src/entity/: app.rs  audio_bridge.rs  infra.rs  mod.rs  player.rs  session.rs
crates/ame-app/src/kernel/: mod.rs
crates/ame-app/src/tray/: mod.rs
crates/ame-app/src/view/: discover.rs  home.rs  login.rs  mod.rs  next.rs  playlist.rs  search.rs  settings.rs
crates/ame-app/src/view/root/: handlers.rs  mod.rs  routes.rs
crates/ame-audio/: Cargo.toml
crates/ame-audio/examples/: play_file.rs
crates/ame-audio/src/: decoder.rs  engine.rs  error.rs  lib.rs  output.rs  source.rs
crates/ame-audio/src/model/: command.rs  config.rs  event.rs  mod.rs  snapshot.rs  state.rs
crates/ame-audio/src/pipeline/: backend.rs  decoder.rs  mod.rs  runtime.rs  service.rs  source.rs
crates/ame-core/: Cargo.toml
crates/ame-core/src/: credential.rs  error.rs  lib.rs  logger.rs  secure.rs  storage.rs
crates/ame-desktop/: Cargo.toml
crates/ame-desktop/src/: gpui_http.rs  main.rs  router.rs  tray.rs
crates/ame-desktop/src/action/: auth_actions.rs  library_actions.rs  mod.rs  player_actions.rs  queue_actions.rs  search_actions.rs  ui_actions.rs
crates/ame-desktop/src/animation/: animation.rs  interpolate.rs  mod.rs  transition.rs
crates/ame-desktop/src/animation/transition/: general.rs
crates/ame-desktop/src/app/: audio_bridge.rs  env.rs  mod.rs  page.rs  router.rs  state.rs  tray.rs
crates/ame-desktop/src/app/page_host/: key.rs  lifecycle.rs  mod.rs  render.rs
crates/ame-desktop/src/app/page_host/slot/: factory.rs  lifecycle.rs  mod.rs  unknown.rs
crates/ame-desktop/src/app/root/: actions.rs  lifecycle.rs  mod.rs
crates/ame-desktop/src/app/root/render/: chrome.rs  content.rs  mod.rs  scrollbar.rs
crates/ame-desktop/src/app/route/: mod.rs  types.rs
crates/ame-desktop/src/app/route/codec/: mod.rs  path.rs  segment.rs
crates/ame-desktop/src/app/runtime/: bootstrap.rs  keys.rs  mod.rs
crates/ame-desktop/src/component/: bottom_bar.rs  button.rs  context_menu.rs  cover_card.rs  icon.rs  input.rs  mod.rs  nav_bar.rs  net_image_cache.rs  page_scaffold.rs  playlist_item.rs  scroll.rs  short_track_item.rs  slider.rs  title_bar.rs  track_item.rs  virtual_list.rs
crates/ame-desktop/src/component/common/: button.rs  icon.rs  mod.rs  page.rs  scroll.rs  section.rs  slider.rs
crates/ame-desktop/src/component/common/context_menu/: builder.rs  mod.rs  style.rs
crates/ame-desktop/src/component/common/input/: mod.rs  style.rs
crates/ame-desktop/src/component/media/: cover_card.rs  mod.rs  playlist_card.rs  short_track_item.rs  track_item.rs
crates/ame-desktop/src/component/shell/: bottom_bar.rs  mod.rs  nav_bar.rs
crates/ame-desktop/src/domain/: mod.rs  runtime.rs
crates/ame-desktop/src/domain/cache/: mod.rs
crates/ame-desktop/src/domain/favorites/: mod.rs  service.rs  state.rs  workflow.rs
crates/ame-desktop/src/domain/player/: mod.rs  service.rs  state.rs
crates/ame-desktop/src/domain/player/workflow/: bridge.rs  mod.rs  persist.rs  queue.rs  types.rs
crates/ame-desktop/src/domain/search/service/: mod.rs  models.rs  query.rs
crates/ame-desktop/src/domain/session/: auth.rs  mod.rs  state.rs
crates/ame-desktop/src/domain/session/service/: cookies.rs  login.rs  mod.rs  profile.rs
crates/ame-desktop/src/domain/session/workflow/: guest.rs  mod.rs  summary.rs  token.rs
crates/ame-desktop/src/domain/settings/: mod.rs  service.rs  types.rs
crates/ame-desktop/src/domain/shell/: mod.rs  service.rs  state.rs
crates/ame-desktop/src/entity/: app.rs  mod.rs  pages.rs  player.rs  player_controller.rs  runtime.rs  session.rs  session_controller.rs
crates/ame-desktop/src/entity/services/: auth.rs  mod.rs  pages.rs  preferences.rs  shell.rs
crates/ame-desktop/src/kernel/: mod.rs
crates/ame-desktop/src/page/: mod.rs  state.rs
crates/ame-desktop/src/page/daily_tracks/: mod.rs  models.rs  service.rs  state.rs
crates/ame-desktop/src/page/discover/: mod.rs  models.rs  service.rs  state.rs
crates/ame-desktop/src/page/home/: mod.rs  models.rs  service.rs  state.rs
crates/ame-desktop/src/page/login/: mod.rs  models.rs  state.rs
crates/ame-desktop/src/page/next/: mod.rs  models.rs
crates/ame-desktop/src/page/playlist/: mod.rs  models.rs  service.rs  state.rs
crates/ame-desktop/src/page/search/: mod.rs  service.rs  state.rs  types.rs
crates/ame-desktop/src/page/settings/: mod.rs  models.rs
crates/ame-desktop/src/router/: mod.rs
crates/ame-desktop/src/tray/: actions.rs  mod.rs
crates/ame-desktop/src/util/: url.rs
crates/ame-desktop/src/view/: common.rs  daily_tracks.rs  discover.rs  home.rs  library.rs  login.rs  mod.rs  next.rs  playlist.rs  search.rs  settings.rs
crates/ame-desktop/src/view/root/: handlers.rs  mod.rs  routes.rs
crates/ame-netease/: Cargo.toml
crates/ame-netease/src/: client.rs  lib.rs
crates/ame-netease/src/api/: mod.rs  request.rs
crates/ame-netease/src/api/album/: mod.rs  new.rs
crates/ame-netease/src/api/artist/: mod.rs  toplist.rs
crates/ame-netease/src/api/common/: mod.rs  models.rs
crates/ame-netease/src/api/mv/: mod.rs
crates/ame-netease/src/api/playlist/: detail.rs  list.rs  mod.rs  personalized.rs  recommend_resource.rs  recommend_songs.rs  toplist.rs
crates/ame-netease/src/api/radio/: mod.rs  personal_fm.rs
crates/ame-netease/src/api/search/: mod.rs  query.rs  song.rs
crates/ame-netease/src/api/track/: detail.rs  like.rs  likelist.rs  lyric.rs  mod.rs  url.rs
crates/ame-netease/src/api/user/: login_qr_check.rs  login_qr_key.rs  login_refresh.rs  mod.rs  playlist.rs  profile.rs  register_anonymous.rs  status.rs
crates/ame-netease/src/crypto/: eapi.rs  mod.rs  weapi.rs
docs/: README.md
(+57 files in other folders)
