[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.5"
edition = "2024"
authors = ["Yamrc <yamrci@outlook.com>"]
description = "Third-party ncm client."
license = "MPL-2.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[workspace.dependencies]
tracing = "0.1.44"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
