[workspace]
members = [
    "crates/ame-audio",
    "crates/ame-core",
    "crates/ame-desktop",
    "crates/ame-netease",
]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2024"
authors = ["Yamrc <yamrci@outlook.com>"]
description = "Third-party ncm client."
license = "MPL-2.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[workspace.dependencies]
anyhow = "1.0.101"
aes = "0.9.0"
audioadapter-buffers = "3.0.0"
blake3 = "1.8.2"
base64 = "0.22.1"
cbc = "0.2.0"
cpal = "0.17.1"
dirs = "6.0.0"
futures = "0.3.31"
nekowg-tray = { git = "https://github.com/Yamrc/nekowg-tray.git" }
hex = "0.4.3"
keyring = { version = "3.6.3", features = [
    "windows-native",
    "apple-native",
    "linux-native-sync-persistent",
    "crypto-rust",
] }
symphonia = { version = "0.5.5", default-features = false }
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"]}
redb = "4.0.0"
md-5 = "0.11.0"
nekowg = { git = "https://github.com/NeoNekos/NekoWG.git", branch = "master", version = "0.2"}
nekowg_platform = { git = "https://github.com/NeoNekos/NekoWG.git", branch = "master", version = "0.2" }
dashmap = "6.1.0"
parking_lot = "0.12.5"
smol = "2.0.2"
num-bigint = "0.4.6"
rand = "0.10.0"
reqwest = "0.13.1"
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
qrcode = "0.14.1"
rubato = "2.0.0"
ringbuf = "0.4.8"
rust-embed = "8.7.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
    "env-filter",
    "local-time",
] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
