[package]
name = "ame"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "ame"
path = "src/main.rs"

[dependencies]
ame-core = { path = "../ame-core" }
ame-audio = { path = "../ame-audio" }
gpui.workspace = true
gpui-animation.workspace = true
gpui-tray.workspace = true
tracing.workspace = true
