[package]
name = "ame-audio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ame-core = { path = "../ame-core" }
audioadapter-buffers.workspace = true
cpal.workspace = true
symphonia = { workspace = true, features = [
    "flac",
    "mp3",
] }
rubato.workspace = true
ringbuf.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tracing.workspace = true
thiserror.workspace = true
