[package]
name = "ame-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
souvlaki.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
