[package]
name = "ame"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "ame"
path = "src/main.rs"

[dependencies]
ame-core = { path = "../ame-core" }
ame-audio = { path = "../ame-audio" }
ame-netease = { path = "../ame-netease" }
anyhow.workspace = true
gpui.workspace = true
gpui-animation.workspace = true
gpui-router.workspace = true
gpui-tray.workspace = true
futures.workspace = true
reqwest.workspace = true
dirs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
qrcode.workspace = true
tokio.workspace = true
tracing.workspace = true
