[package]
name = "ame-netease"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
aes.workspace = true
base64.workspace = true
cbc.workspace = true
hex.workspace = true
md-5.workspace = true
num-bigint.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["form", "json"] }
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
